@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Aug 2009; Lance Albertson <ramereth@gentoo.org> iniparse-0.2.3.ebuild,
+  iniparse-0.3.1.ebuild:
+  Keyword ppc & ppc64
+
   25 Aug 2009; Lance Albertson <ramereth@gentoo.org> +metadata.xml:
   QA Fixes
 
